Fix overflow on grid view

--- a/myuw/static/css/photo_list.less
+++ b/myuw/static/css/photo_list.less
@@ -68,7 +68,8 @@
 
             @media @two-column { margin-bottom: 16px;}
 
-            &:last-child { margin: 0; }
+            &:last-child { margin: 0;
+                margin-bottom: 10px; }
 
             .myuw-photo-list-img-wrapper {
                 width: 120px;
